--- a/2023ECE226Note/collection/chapter3.tex
+++ b/2023ECE226Note/collection/chapter3.tex
@@ -17,6 +17,8 @@
     \end{enumerate}
 \end{theorem}
 
+\section{Histogram}
+
 \section{Families of Discrete Random Variables}
 \begin{enumerate}
     \item Bernoulli($p$): Single experiment with success rate $p$ (\textbf{\ie, Flip a coin}), $x$ is the number of successes{
